jenkins/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    #- host: jenkins2.home.local
    - http:
        paths:
        - path: /jenkins2
          pathType: prefix
          backend:
            serviceName: jenkins-access
            servicePort: 80
